<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/fonAddWork"
    xmlns:android="http://schemas.android.com/apk/res/android">


<android.support.constraint.ConstraintLayout
    android:background="@color/fonAddWork"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView18"
        style="@style/textHeadAddWork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="7dp"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/newRecommendation"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView19"
        style="@style/textSecondAddWork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="52dp"
        android:gravity="center"
        android:text="@string/secondTextForNewRecommendation"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mConfirmBtn"
        style="@style/ok"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/add"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/mCancelBtn"
        style="@style/cancelRed"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mConfirmBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/round_black_bgd"
        android:backgroundTint="@color/White"
        android:elevation="4dp"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@+id/mCancelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:text="@string/specification"
            android:textColor="@color/colorGrayText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/text_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/hint_text"
            android:gravity="start"
            android:hint="@string/hintTextSpecification"
            android:paddingStart="16dp"
            android:paddingTop="7dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/indicateDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:text="Укажите дату выявления"
            android:textColor="@color/colorGrayText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_work" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/line_puncture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDate" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:text="@string/textPhoto"
            android:textColor="@color/colorGrayText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider7" />


        <ImageView
            android:id="@+id/photoResult_1"
            style="@style/photo"
            android:layout_marginStart="17dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <ImageView
            android:id="@+id/photoResult_2"
            style="@style/photo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/photoResult_1"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <ImageView
            android:id="@+id/photoResult_3"
            style="@style/photo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/photoResult_2"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <ImageView
            android:id="@+id/photoResult_4"
            style="@style/photo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/photoResult_3"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <FrameLayout
            android:id="@+id/frameLayoutCamera"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24">

            <ImageButton
                android:id="@+id/photoCamera"
                style="@style/cameraButton" />
        </FrameLayout>

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:hint="Время"
            android:textColorHint="@color/colorBluAction"
            android:ems="10"
            android:inputType="date"
            android:textColor="@color/colorBluAction"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/indicateDate" />

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:id="@+id/choice"
            app:layout_constraintBottom_toTopOf="@+id/divider7"
            app:layout_constraintStart_toEndOf="@+id/textDate">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/choice"/>

        </FrameLayout>


    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>

</ScrollView>